  o Major bugfixes:
    - Only update guard status (usable / not usable) once we have
      enough directory information. This was causing us to always pick
      two new guards on startup (bugfix on 0.2.0.9-alpha), and it was
      causing us to discard all our guards on startup if we hadn't been
      running for a few weeks (bugfix on 0.1.2.x). Fixes bug 448.

  o Minor bugfixes:
    - The fix in 0.2.0.12-alpha cleared the "hsdir" flag in v3 network
      consensus documents when there are too many relays at a single
      IP address. Now clear it in v2 network status documents too.
    - Don't crash if we get an unexpected value for the
      PublishServerDescriptor config option. Reported by Matt Edman;
      bugfix on 0.2.0.9-alpha.
    - Our new v2 hidden service descriptor format allows descriptors
      that have no introduction points. But Tor crashed when we tried
      to build a descriptor with no intro points (and it would have
      crashed if we had tried to parse one). Bugfix on 0.2.0.x; patch
      by Karsten Loesing.
    - Fix building with dmalloc 5.5.2 with glibc.

  o Minor features:
    - On USR1, when dmalloc is in use, log the top 10 memory
      consumers. (We already do this on HUP.)
    - Authorities and caches fetch the v2 networkstatus documents
      less often, now that v3 is encouraged.


Changes in version 0.2.0.12-alpha - 2007-11-16
  This twelfth development snapshot fixes some more build problems as
  well as a few minor bugs.

  o Compile fixes:
    - Make it build on OpenBSD again. Patch from tup.
    - Substitute BINDIR and LOCALSTATEDIR in scripts. Fixes
      package-building for Red Hat, OS X, etc.

  o Minor bugfixes (on 0.1.2.x):
    - Changing the ExitPolicyRejectPrivate setting should cause us to
      rebuild our server descriptor.

  o Minor bugfixes (on 0.2.0.x):
    - When we're lacking a consensus, don't try to perform rendezvous
      operations. Reported by Karsten Loesing.